--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
 Theme Name: Under Material
-Theme URI: http://underscores.me/
-Author: Underscores.me
-Author URI: http://underscores.me/
-Description: Description
+Theme URI: https://minory.org/
+Author: minory.org
+Author URI: https://minory.org/
+Description: ブランクテーマであるUnderscoresをベースに、BootstrapとMaterial Design for Bootstrapを掛け合わせて制作した、レスポンシブ対応のマテリアルデザインテーマです。
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: under-material
-Tags:
+Tags:Underscores, Bootstrap, Material Design for Bootstrap
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
